--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "express": "^4.12.4",
+    "morgan": "^1.6.1",
     "applescript": "^1.0.0",
     "body-parser": "^1.12.4"
   }
