--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "url": "https://github.com/jnewland/airfoil-api/issues"
   },
   "dependencies": {
-    "express": "^4.12.4",
-    "morgan": "^1.6.1",
     "applescript": "^1.0.0",
-    "body-parser": "^1.12.4"
+    "body-parser": "^1.12.4",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
   }
 }
